[package]
name = "abdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
bincode = "1.3.3"
deltalake = "0.22.3"
duckdb = { version = "1.1.1", features=["bundled"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
