[package]
name = "abdb"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
ahash = "0.8.11"
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
deltalake = "0.22.3"
duckdb = { version = "1.1.1", features=["bundled"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "my_benchmark"
harness = false